--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
 		</div>
 	</root-app>
 
+
+  <script>
+    if (sessionStorage && history){
+      // simulate html5 mode server behavior on github pages - see 404.html
+      var redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      if (redirect && redirect != location.href) {
+        history.replaceState(null, null, redirect);
+      }
+    }
+  </script>
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
